fix: responsive css now used properly on iPhone

--- a/_static/media/css/app.css
+++ b/_static/media/css/app.css
@@ -10,7 +10,7 @@
 -------------------------------------------------- */
 body {
   position: relative;
-  // padding-top: 40px;
+  padding-top: 40px;
   background-color: #fff;
   // background-image: url(../img/grid-18px-masked.png);
   // background-repeat: repeat-x;
@@ -39,9 +39,9 @@ body {
 
 /* Space out sub-sections more
 -------------------------------------------------- */
-section {
-  padding-top: 60px;
-}
+//section {
+//  padding-top: 60px;
+//}
 
 /* Faded out hr */
 hr.soften {
